{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "d9f08509-d6b4-4f12-bbc2-d78de6aed68c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "d3c04f9b-62ac-4f46-a828-872982b1b718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e2511a8a-9cde-4d7a-b094-e094cdd85bfd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Stop",
                    "type": "Button",
                    "id": "46bdd9cb-2259-4622-b4e3-17a67f41694c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b2d687f-6c01-47ed-9595-a2c29bb3fd3f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee4ca8fc-0853-420d-be1a-27ee07b8ebf8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cec51d58-e5c7-45e3-955c-7375e477d5c5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameMenu",
            "id": "7ccd2aca-4ed1-4d48-b6e2-1696c52fa500",
            "actions": [
                {
                    "name": "ToggleOrBack",
                    "type": "Button",
                    "id": "2bc78b56-4979-4279-ab63-5ea07611de5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "38bc887c-8c41-46d8-be77-3ac87e2e286a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29ce3e16-7cb0-4b17-8846-5daa72ffb482",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleOrBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d1aade2-1769-40a3-be66-4d2092a75ca3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}